--- a/Frontend/src/app/app.style.css
+++ b/Frontend/src/app/app.style.css
@@ -41,6 +41,11 @@ button {
     color: #393646;
 }
 
+.no-data {
+    color: #96cc72;
+    text-align: center;
+}
+
 button:hover {
     background-color: #393646;
     border-radius: 15px;
@@ -67,10 +72,12 @@ button:hover {
 }
 
 .content-note {
-    margin-left: 8px;
-    margin-right: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 0%;
 
     height: 120px;
+    min-width: 90%;
     overflow: scroll;
     overflow-x: hidden;
 }
@@ -92,16 +99,30 @@ button:hover {
     background: #555;
 }
 
-.content-createAt::before {
+.footer-note::before {
     content: '';
     background-color: #96cc72;
     height: 2px;
     display: block;
 }
 
+.tag-list-note, .content-createAt {
+    display: inline-block;
+}
+.tag-list-note {
+    padding: 0px;
+    margin: 0px;
+    min-width: 80%;
+    min-height: 100%;
+}
+.tag-note {
+    padding: 0px;
+    margin: 0px;
+}
+
 .content-createAt {
     font-size: 18px;
-    text-align: right;
+    text-align: left;
     /* bottom: ; */
 }
 
